src/app/feature/browse-courses/browse-courses.component.css
/* Mobile (default) */
.browse-courses {
  padding: 12px 24px;
  text-align: center;
  justify-content: center;
}

.card-container {
  display: flex;
  justify-content: center;
  align-items: left;
  flex-wrap: wrap;
}


.card {
  display: flex;
  flex-direction: column;
  width: 200px;
  height: 300px;
  background-color: #D8DCFF;
  border-radius: 10px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
  overflow: hidden;
  margin: 20px;
}

a {
  text-decoration: none;
  color: black;
}

.card:hover {
  transform: scale(1.05);
  transition: transform 0.25s ease-in-out;
}

.inner-box {
  height: 50%;
  background-color: #a7bcda;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  margin: 10px;
}

.description {
  height: 50%;
  display: flex;
  align-items: normal;
  text-align: left;
  padding: 0px 18px;
}

/* Tablet */
@media screen and (min-width: 768px) {

  .browse-courses {
    margin: 12px 10% 180px;
    padding: 12px 24px;
    text-align: left;
  }

  .card-container{
    float: left;
  }

  .card-section {
    margin-bottom: 180px;
  }
}

/* Desktop */
@media screen and (min-width: 1200px) {

  .browse-courses {
    margin: 12px 12% 180px;
    padding: 12px 24px;
    text-align: left;
  }

  .card-container{
    float: left;
  }
}

